--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,34 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-image: url("/images/stars.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+img {
+  margin-bottom: 3em;
+  max-width: 100%;
+}
+
+input {
+  margin-top: 1em;
+}
+
+label {
+  font-size: 1.2em;
+}
+
+p {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.container {
+  margin: 3em auto;
+  text-align: center;
+}
+
+.form-control {
+  margin: auto;
 }
